--- a/CPU_Performance_Prediction.ipynb
+++ b/CPU_Performance_Prediction.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv(r'C:/Users/zhmam/Desktop/Computer Hardware/Computer Hardware.csv')"
+    "df=pd.read_csv(r'./Computer Hardware.csv')"
    ]
   },
   {
